CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF("${OVERHEAT_POPUP}" STREQUAL "off")
	RETURN()
ENDIF("${OVERHEAT_POPUP}" STREQUAL "off")

SET(OVERHEAT_SRCS ${COMMON_SRCS} overheat.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${COMMON_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/common)

SET(VENDOR "tizen")
SET(PACKAGE "overheat-syspopup")
SET(EXECNAME "overheat-popup")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(OVERHEAT_PREFIX "${TZ_SYS_RO_APP}/${PKGNAME}")
SET(RESDIR "${OVERHEAT_PREFIX}/res")
SET(MANIFESTDIR "${TZ_SYS_RO_SHARE}/packages")
SET(OVERHEAT_RES "${TZ_SYS_RO_APP}/${PKGNAME}/shared/res")

SET(PKG_MODULES
		appcore-efl
		bundle
		dlog
		ecore
		evas
		syspopup
		vconf
		elementary
		deviced
		feedback
		efl-extension
		appsvc
		edbus
		capi-appfw-application
)

INCLUDE(FindPkgConfig)
pkg_check_modules(overheat_pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${overheat_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -O2 -g -Wall -fpie")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -fpie")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -fpie")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DOVERHEAT_RES=\"${OVERHEAT_RES}\"")
ADD_DEFINITIONS("-DELM_OVERHEAT_EDC=\"${OVERHEAT_RES}/${EXECNAME}.edj\"")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

ADD_EXECUTABLE(${EXECNAME} ${OVERHEAT_SRCS})
TARGET_LINK_LIBRARIES(${EXECNAME} ${overheat_pkgs_LDFLAGS})

INSTALL(TARGETS ${EXECNAME} DESTINATION ${TZ_SYS_RO_APP}/${PKGNAME}/bin)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/overheat/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})

ADD_CUSTOM_TARGET(${EXECNAME}.edj
	COMMAND edje_cc -no-save ${CMAKE_SOURCE_DIR}/src/overheat/${EXECNAME}.edc ${CMAKE_BINARY_DIR}/${EXECNAME}.edj
	DEPENDS ${CMAKE_SOURCE_DIR}/src/overheat/${EXECNAME}.edc
	COMMENT "making edj file"
)
ADD_DEPENDENCIES(${EXECNAME} ${EXECNAME}.edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${EXECNAME}.edj DESTINATION ${OVERHEAT_RES})

# install manifest file
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/overheat/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})
