CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF("${POWERKEY_POPUP}" STREQUAL "off")
	RETURN()
ENDIF("${POWERKEY_POPUP}" STREQUAL "off")

SET(POWERKEY_SRCS ${COMMON_SRCS} powerkey.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${COMMON_DIR})

SET(VENDOR "tizen")
SET(PACKAGE "powerkey-syspopup")
SET(EXECNAME "powerkey-popup")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(POWERKEY_PREFIX "${TZ_SYS_RO_APP}/${PKGNAME}")
SET(BINDIR "${POWERKEY_PREFIX}/bin")
SET(RESDIR "${POWERKEY_PREFIX}/res")
SET(MANIFESTDIR "${TZ_SYS_RO_SHARE}/packages")

SET(PKG_MODULES
		appcore-efl
		elementary
		dlog
		deviced
		evas
		ecore
		edbus
		glib-2.0
		vconf
		syspopup
		syspopup-caller
		feedback
		efl-extension
)

IF("${DPMS}" STREQUAL "x")
SET(PKG_MODULES ${PKG_MODULES}
		ecore-x
		utilX
)
ENDIF("${DPMS}" STREQUAL "x")

INCLUDE(FindPkgConfig)
pkg_check_modules(powerkey_pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${powerkey_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -O2 -g -Wall -fpie")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -fpie")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -fpie")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

ADD_EXECUTABLE(${EXECNAME} ${POWERKEY_SRCS})
TARGET_LINK_LIBRARIES(${EXECNAME} ${powerkey_pkgs_LDFLAGS})

INSTALL(TARGETS ${EXECNAME} DESTINATION ${TZ_SYS_RO_APP}/${PKGNAME}/bin)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/powerkey/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})

INSTALL(FILES ${CMAKE_SOURCE_DIR}/circle_btn_check.png DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/circle_btn_delete.png DESTINATION ${RESDIR})
