CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF("${POWEROFF_POPUP}" STREQUAL "off")
	RETURN()
ENDIF("${POWEROFF_POPUP}" STREQUAL "off")

SET(POWEROFF_SRCS ${COMMON_SRCS} poweroff.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${COMMON_DIR})

SET(VENDOR "tizen")
SET(PACKAGE "poweroff-syspopup")
SET(EXECNAME "poweroff-popup")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(POWEROFF_PREFIX "${TZ_SYS_RO_APP}/${PKGNAME}")
SET(BINDIR "${POWEROFF_PREFIX}/bin")
SET(RESDIR "${POWEROFF_PREFIX}/res")
SET(MANIFESTDIR "${TZ_SYS_SHARE}/packages")

SET(PKG_MODULES
		appcore-efl
		elementary
		dlog
		deviced
		evas
		ecore
		edbus
		glib-2.0
		vconf
		syspopup
		syspopup-caller
		feedback
		efl-extension
)

IF("${DPMS}" STREQUAL "x")
SET(PKG_MODULES ${PKG_MODULES}
		ecore-x
		utilX
)
ENDIF("${DPMS}" STREQUAL "x")

INCLUDE(FindPkgConfig)
pkg_check_modules(poweroff_pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${poweroff_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -O2 -g -Wall -fpie")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -fpie")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -fpie")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

ADD_EXECUTABLE(${EXECNAME} ${POWEROFF_SRCS})
TARGET_LINK_LIBRARIES(${EXECNAME} ${poweroff_pkgs_LDFLAGS})

INSTALL(TARGETS ${EXECNAME} DESTINATION ${TZ_SYS_RO_APP}/${PKGNAME}/bin)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/poweroff/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})
